<resources>
    <!--    resources for layout-->
    <string name="app_name">TestTimer</string>
    <string name="start">Start</string>
    <string name="remainingtime">00:10</string>
    <string name="resttime">00:20</string>
    <string name="timer">Timer</string>
    <string name="timericon">Timer</string>
    <string name="blficon">Blue light filter</string>
    <string name="distanceicon">Distance Guideline</string>
    <string name="couponicon">Coupon rewards</string>
    <string name="summaryicon">Summary</string>
    <string name="settingicon">Rest setting</string>
    <string name="norest">No rest</string>
    <string name="placeholder_again">Placeholder again</string>
    <string name="rest">Rest</string>
    <string name="points">100</string>
    <string name="totalpoints">Total points</string>
    <string name="coupon">Coupon Rewards</string>
    <string name="redeem">Redeem</string>
    <string name="username">user1</string>
    <string name="logout">Logout</string>
    <string name="berry1">น้องเบอร์รีตาล้า</string>
    <string name="berry2">น้องเบอร์รีตาสดใส</string>
    <string name="berry3">น้องเบอร์รีตาใสปิ๊งๆๆ</string>
    <string name="movein">Please move your face IN</string>
    <string name="moveout">Please move your face OUT</string>
    <string name="distance">20.00</string>
    <string name="cm">cm</string>
    <string name="history">History</string>
    <string name="totalScreenTime">Total screen time</string>
    <string name="totalRestTime">Total rest time</string>
    <string name="ttScreenTime">3.40</string>
    <string name="ttRestTime">1.30</string>
    <string name="hr">hr</string>
    <string name="settimer">Set timer</string>
    <string name="setrest">Set Rest</string>
    <string name="contact">Contact us:</string>
    <string name="email">contact_us@gmail.com</string>
    <string name="toggle_blue_light">Toggle blue light</string>
    <string name="er">Digital Eyestrain Relief (ER)</string>
    <string name="forgot">Forgot password?</string>
    <string name="reg_txt">Don\'t have an account?</string>
    <string name="reg_txt_btn">Register now</string>
    <string name="register">Register</string>
    <string name="registration">Registration</string>
    <string name="submit">SUBMIT</string>
    <string name="loginUsername">username</string>
    <string name="loginPassword">password</string>
    <string name="newPassword">New password : </string>
    <string name="confirmPassword">Confirm password : </string>
    <string name="reg_username">Username : </string>
    <string name="reg_password">Password : </string>
    <string name="reg_fname">First name : </string>
    <string name="reg_lname">Last name : </string>
    <string name="reg_email">Email : </string>
    <string name="reg_bd">Birthday : </string>
    <string name="blueLightFilter">Blue Light Filter</string>
    <string name="brightness">Brightness</string>
    <string name="red_value">Red</string>
    <string name="green_value">Green</string>
    <string name="blue_value">Blue</string>
    <string name="R">R</string>
    <string name="G">G</string>
    <string name="Y">Y</string>
    <string name="OFF">OFF</string>
    <string name="ON">ON</string>
    <string name="menu_btn"></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>