<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#56C3F4"
    tools:context=".RegisterFragment">


    <TextView
        android:id="@+id/forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/jost"
        android:text="@string/forgot"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/layout_forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:background="@drawable/round_rect"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.216">

        <LinearLayout
            android:id="@+id/layout_email"
            android:layout_marginStart="80dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/reg_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/jost"
                android:text="@string/reg_email"
                android:textSize="15sp"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/edit_email"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/jost"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:hint="Enter your email"
                android:textColorHint="#65000000"/>

        </LinearLayout>



        <LinearLayout
            android:id="@+id/layout_newpwd"
            android:layout_marginStart="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/new_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/jost"
                android:text="@string/newPassword"
                android:textSize="15sp"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/edit_user"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/jost"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:hint="Enter new password"
                android:textColorHint="#65000000"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_confirmpwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/confirm_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/jost"
                android:text="@string/confirmPassword"
                android:textSize="15sp"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/edit_password"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/jost"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:hint="Enter confirm password"
                android:textColorHint="#65000000"/>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_round_rect"
        android:fontFamily="@font/jost"
        android:text="@string/submit"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_forgot"
        app:layout_constraintVertical_bias="0.126" />

</androidx.constraintlayout.widget.ConstraintLayout>