<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A4AAA3"
    tools:context=".SettingsFragment">

    <!--    menu button-->
    <Button
        android:id="@+id/btn_menu"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/menu_icon2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/layout_settime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:gravity="center"
        android:padding="15dp"
        android:background="#80FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/set"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settimer"
            android:textSize="25sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/mins"
            android:layout_marginStart="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLength="2"
            android:inputType="number"
            android:text="20"
            android:fontFamily="@font/jost"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text=":"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/secs"
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLength="2"
            android:inputType="number"
            android:text="00"
            android:fontFamily="@font/jost"
            android:textSize="20sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_setrest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:padding="15dp"
        android:background="#80FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_settime">

        <TextView
            android:id="@+id/set2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setrest"
            android:textSize="25sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/mins2"
            android:layout_marginStart="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLength="2"
            android:inputType="number"
            android:text="00"
            android:fontFamily="@font/jost"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text=":"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/secs2"
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLength="2"
            android:inputType="number"

            android:text="20"
            android:fontFamily="@font/jost"
            android:textSize="20sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:padding="15dp"
        android:background="#80FFFFFF"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_setrest">

        <TextView
            android:id="@+id/contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact"
            android:fontFamily="@font/jost"
            android:textSize="25sp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:fontFamily="@font/jost"
            android:textSize="25sp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>